feat: adicionando o keycloak na arquitetura e java doc no controller, repositori